# code-cartographer

./: LICENSE  README.md  pyproject.toml  tree.txt
docs/: architecture.md  usage.md
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  main.tsx  test-setup.ts
frontend/src/api/: client.test.ts  client.ts
frontend/src/components/: Controls.test.tsx  Controls.tsx  GraphView.tsx
frontend/src/mocks/: handlers.ts
frontend/src/state/: AppContext.tsx  actions.ts  reducer.test.ts  reducer.ts
src/code_cartographer/: __main__.py  exceptions.py
src/code_cartographer/construction/: builders.py  visitors.py
src/code_cartographer/metamodel/: elements.py  model.py  relationship.py
src/code_cartographer/presentation/: renderers.py  serializers.py  server.py
src/code_cartographer/query_control/: commands.py  facade.py  query.py  view_state.py
tests/construction/: conftest.py  test_builders.py
tests/metamodel/: test_elements.py  test_model.py  test_relationship.py
tests/presentation/: test_renderers.py  test_serializers.py  test_server.py
tests/query_control/: test_commands.py  test_facade.py  test_query_and_viewstate.py
