[tool.pytest.ini_options]
pythonpath = ["src"]

[project]
name = "code_cartographer"
version = "0.1.0"
description = "An advanced architectural analysis tool for Python projects."
authors = [
    {    name = "Alessandro Da Ros", email = "a.da.ros@student.tue.nl"  },
    {    name = "gemini-2.5-pro"    }
    
]
requires-python = ">=3.9"
dependencies = [
    "graphviz>=0.20",
    "fastapi>=0.95",
    "uvicorn[standard]>=0.21",
    "httpx>=0.28.1",
]

[project.scripts]
code-cartographer = "code_cartographer.__main__:main"